@@ -1,27 +1,48 @@
-package es.tid.smartsteps.dispersion.data;
+package es.tid.smartsteps.dispersion;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.io.NullWritable;
+import org.apache.hadoop.io.Text;
+import org.apache.hadoop.mrunit.mapreduce.ReduceDriver;
+import org.apache.hadoop.mrunit.types.Pair;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 import org.junit.Before;
 import org.junit.Test;
 
-import es.tid.smartsteps.dispersion.Config;
+import es.tid.cosmos.base.mapreduce.BinaryKey;
+import es.tid.smartsteps.dispersion.data.TrafficCountsEntry;
 import es.tid.smartsteps.dispersion.parsing.TrafficCountsEntryParser;
 
 /**
  *
  * @author dmicol
  */
-public class TrafficCountsEntryTest {
+public class AggregationReducerTest {
 
-    private TrafficCountsEntry instance;
+    private ReduceDriver<BinaryKey, Text, NullWritable, Text> instance;
+    private TrafficCountsEntryParser parser;
+    private BinaryKey key;
+    private Text value;
     
     @Before
     public void setUp() throws IOException {
-        final String value = "{\"date\": \"20120527\", "
+        this.instance = new ReduceDriver<BinaryKey, Text, NullWritable, Text>(
+                new AggregationReducer());
+        final Configuration config = Config.load(
+                Config.class.getResource("/config.properties").openStream(),
+                this.instance.getConfiguration());
+        this.parser = new TrafficCountsEntryParser(
+                config.getStrings(Config.COUNT_FIELDS));
+        this.instance.setConfiguration(config);
+        this.key = new BinaryKey("4c92f73d4ff50489d8b3e8707d95ddf073fb81aac6"
+                                 + "d0d30f1f2ff3cdc0849b0c", "20120527");
+        this.value = new Text("{\"date\": \"20120527\", "
                 + "\"footfall_observed_basic\": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, "
                 + "0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1], "
                 + "\"footfall_observed_female\": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0,"
@@ -45,7 +66,7 @@ public class TrafficCountsEntryTest {
                 + "\"BILL\": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, "
                 + "0, 0, 0, 0, 0, 0, 0, 0, 0]}, "
                 + "\"footfall_observed_0\": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, "
-                + "0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1], "
+                + "0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1], "
                 + "\"footfall_observed_age_60\": [0, 0, 0, 0, 0, 0, 0, 0, 0, "
                 + "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], "
                 + "\"footfall_observed_age_20\": [0, 0, 0, 0, 0, 0, 0, 0, 0, "
@@ -53,25 +74,24 @@ public class TrafficCountsEntryTest {
                 + "\"cellid\": \"4c92f73d4ff50489d8b3e8707d95ddf073fb81aac6d0d3"
                 + "0f1f2ff3cdc0849b0c\", \"footfall_observed_age_40\": [0, 0, "
                 + "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, "
-                + "0, 0, 0]}";
-        final Configuration config = Config.load(Config.class.getResource(
-                "/config.properties").openStream(), new Configuration());
-        this.instance = new TrafficCountsEntryParser(
-                config.getStrings(Config.COUNT_FIELDS)).parse(value);
+                + "0, 0, 0]}");
     }
 
     @Test
-    public void testGetKey() {
-        assertEquals("4c92f73d4ff50489d8b3e8707d95ddf073fb81aac6d0d30f1f2ff3cdc"
-                + "0849b0c", this.instance.getKey());
-    }
-
-    @Test
-    public void testScale() {
-        TrafficCountsEntry scaledEntry = this.instance.scale(2.6D);
-        ArrayList<Double> counts = scaledEntry.counts.get(
-                "footfall_observed_basic");
-        assertEquals(0.0D, counts.get(0), 0.0D);
-        assertEquals(2.6D, counts.get(24), 0.0D);
+    public void testReduce() throws IOException {
+        List<Pair<NullWritable, Text>> results = this.instance
+                .withInput(this.key,
+                           Arrays.asList(this.value, this.value, this.value))
+                .run();
+        assertNotNull(results);
+        assertEquals(1, results.size());
+        final Pair<NullWritable, Text> result = results.get(0);
+        assertEquals(NullWritable.get(), result.getFirst());
+        final TrafficCountsEntry outValue = this.parser.parse(
+                result.getSecond().toString());
+        ArrayList<Double> counts = outValue.counts.get("footfall_observed_0");
+        assertEquals(0, counts.get(15).intValue());
+        assertEquals(6, counts.get(19).intValue());
+        assertEquals(3, counts.get(24).intValue());
     }
 }
